--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,4 @@ project(freertoslinux)
 include(cmake/options.cmake)
 include(cmake/freertos.cmake)
 include(cmake/freertoslinux.cmake)
+include(cmake/linuxtests.cmake)
